started list of apps we have built, need to put lexus in still

--- a/index.html
+++ b/index.html
@@ -28,6 +28,25 @@
 		<h1>
 			We make amazing apps
 		</h1>
+		<ul> <!-- List of MOBILE APPS http://schema.org/MobileApplication -->
+			<li><a href="https://itunes.apple.com/us/app/ugly-meter/id388336485?mt=8">Ugly Meter</a></li>
+			<li><a href="https://itunes.apple.com/us/app/ugly-meter-pro/id504614735?mt=8">Ugly Meter Pro</a></li>
+			<li><a href="https://itunes.apple.com/us/app/wordicus-free/id395403495?mt=8">Wordicus</a> - the first multiplayer multilanguage word game</li>
+			<li><a href="https://itunes.apple.com/us/app/free-flashlight/id389960409?mt=8">Free Flashlight</a> - one of the first flashlight apps back when the iPhone didn't come with one</li>
+			<li><a href="https://itunes.apple.com/us/app/naughty-meter/id483936528?mt=8">Naughty Meter</a></li>
+			<li><a href="https://itunes.apple.com/us/app/benjelisa/id567569743?mt=8">Benjelisa</a></li>
+			<li><a href="https://itunes.apple.com/us/app/father-sterling-comic/id349426110?mt=8">Father Sterling</a> - a collaborative art experiment</li>
+			<li><a href="https://itunes.apple.com/us/app/securely-password-vault/id470475299?mt=8">Securely</a> - the first password keychain to utilize iCloud</li>
+			<li><a href="https://itunes.apple.com/us/app/source-deck-free/id467534422?mt=8">Source Deck</a></li>
+			<li><a href="https://itunes.apple.com/us/app/ohsnap-for-facebook/id492812877?mt=8">Oh Snap!</a> - the first photo app to post to facebook (built when facebook didn't have an iPad app)</li>
+			<li><a href="https://itunes.apple.com/us/app/clown-harder/id389462328?mt=8">Clown Harder</a> - a remix of the classic circus game built to use gamecenter on its launch</li>
+			<li><a href="https://itunes.apple.com/us/app/meatball-madness!/id366609897?mt=8">Meatball Madness</a> - built for the launch of Apple's iPad</li>
+			<li><a href="https://itunes.apple.com/us/app/monsters-invade-oz/id607204560?mt=8">Monsters Invade Oz</a> - Winner of GDC Play 2013, Featured by Apple, Over 4000 5-star reviews</li>
+
+
+
+
+		</ul>
 		<p itemscope itemtype="http://schema.org/Organization">
 			<span
 				itemprop="name"
@@ -578,7 +597,7 @@
 	<h3>List of cloud technologies we work with</h3>
 		<p>So much magic to be built on the back-end.</p>
 		<ul>
-			<li>AWS Deployment</li>
+			b
 			<li>Azure Deployment</li>
 			<li>Scalable Infrastructures</li>
 			<li>Performance Optimization</li>
@@ -589,7 +608,7 @@
 			<li>PostgreSQL</li>
 		</ul>
 
-<h2>We are talented (plus we work hard)</h2>
+<h2>We are talented (plus we work hard)</h2> <!-- SCHEMA AWARDS http://schema.org/award -->
 	<p>You don't need to take our word for it, see some of the awards and 
 	praises we have recently received.</p>
 
@@ -598,7 +617,7 @@
 			<li>148</li>
 		</ul>
 
-	<h3>Honors and Awards</h3>
+	<h3>Honors and Awards</h3> 
 		<ul>
 			<li>Winner: 2013 GDC Best in Play</li>
 			<li>Featured: Apple New and Noteworthy</li>
