apps added, need microdata and sorting

--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 			<li><a href="https://itunes.apple.com/us/app/clown-harder/id389462328?mt=8">Clown Harder</a> - a remix of the classic circus game built to use gamecenter on its launch</li>
 			<li><a href="https://itunes.apple.com/us/app/meatball-madness!/id366609897?mt=8">Meatball Madness</a> - built for the launch of Apple's iPad</li>
 			<li><a href="https://itunes.apple.com/us/app/monsters-invade-oz/id607204560?mt=8">Monsters Invade Oz</a> - Winner of GDC Play 2013, Featured by Apple, Over 4000 5-star reviews</li>
+			<li><a href="https://itunes.apple.com/us/app/2014-lexus-is/id658033876?mt=8">Lexus 2014 IS</a> - Addy award winning app 4.5 stars</li>
+			<li><a href="https://itunes.apple.com/us/app/keyser-office-space-calculator/id931228445?mt=8">Keyser Office Space Calculator</a></li>
 
 
 
