--- a/index.html
+++ b/index.html
@@ -28,27 +28,6 @@
 		<h1>
 			We make amazing apps
 		</h1>
-		<ul> <!-- List of MOBILE APPS http://schema.org/MobileApplication -->
-			<li><a href="https://itunes.apple.com/us/app/ugly-meter/id388336485?mt=8">Ugly Meter</a></li>
-			<li><a href="https://itunes.apple.com/us/app/ugly-meter-pro/id504614735?mt=8">Ugly Meter Pro</a></li>
-			<li><a href="https://itunes.apple.com/us/app/wordicus-free/id395403495?mt=8">Wordicus</a> - the first multiplayer multilanguage word game</li>
-			<li><a href="https://itunes.apple.com/us/app/free-flashlight/id389960409?mt=8">Free Flashlight</a> - one of the first flashlight apps back when the iPhone didn't come with one</li>
-			<li><a href="https://itunes.apple.com/us/app/naughty-meter/id483936528?mt=8">Naughty Meter</a></li>
-			<li><a href="https://itunes.apple.com/us/app/benjelisa/id567569743?mt=8">Benjelisa</a></li>
-			<li><a href="https://itunes.apple.com/us/app/father-sterling-comic/id349426110?mt=8">Father Sterling</a> - a collaborative art experiment</li>
-			<li><a href="https://itunes.apple.com/us/app/securely-password-vault/id470475299?mt=8">Securely</a> - the first password keychain to utilize iCloud</li>
-			<li><a href="https://itunes.apple.com/us/app/source-deck-free/id467534422?mt=8">Source Deck</a></li>
-			<li><a href="https://itunes.apple.com/us/app/ohsnap-for-facebook/id492812877?mt=8">Oh Snap!</a> - the first photo app to post to facebook (built when facebook didn't have an iPad app)</li>
-			<li><a href="https://itunes.apple.com/us/app/clown-harder/id389462328?mt=8">Clown Harder</a> - a remix of the classic circus game built to use gamecenter on its launch</li>
-			<li><a href="https://itunes.apple.com/us/app/meatball-madness!/id366609897?mt=8">Meatball Madness</a> - built for the launch of Apple's iPad</li>
-			<li><a href="https://itunes.apple.com/us/app/monsters-invade-oz/id607204560?mt=8">Monsters Invade Oz</a> - Winner of GDC Play 2013, Featured by Apple, Over 4000 5-star reviews</li>
-			<li><a href="https://itunes.apple.com/us/app/2014-lexus-is/id658033876?mt=8">Lexus 2014 IS</a> - Addy award winning app 4.5 stars</li>
-			<li><a href="https://itunes.apple.com/us/app/keyser-office-space-calculator/id931228445?mt=8">Keyser Office Space Calculator</a></li>
-
-
-
-
-		</ul>
 		<p itemscope itemtype="http://schema.org/Organization">
 			<span
 				itemprop="name"
@@ -91,6 +70,20 @@
 				content="info@dappergentlemen.com"
 			>
 		</p>
+
+		<ul> <!-- List of MOBILE APPS http://schema.org/MobileApplication -->
+			<li><a href="https://itunes.apple.com/us/app/2014-lexus-is/id658033876?mt=8">Lexus 2014 IS</a> - Addy award winning app 4.5 stars</li>
+			<li><a href="https://itunes.apple.com/us/app/monsters-invade-oz/id607204560?mt=8">Monsters Invade Oz</a> - Winner of GDC Play 2013, Featured by Apple, Over 4000 5-star reviews</li>
+			<li><a href="https://itunes.apple.com/us/app/ugly-meter/id388336485?mt=8">Ugly Meter</a></li>
+			<!-- EXPERIMENTS -->
+			<li><a href="https://itunes.apple.com/us/app/wordicus-free/id395403495?mt=8">Wordicus</a> - the first multiplayer multilanguage word game</li>
+			<li><a href="https://itunes.apple.com/us/app/free-flashlight/id389960409?mt=8">Free Flashlight</a> - one of the first flashlight apps back when the iPhone didn't come with one</li>
+			<li><a href="https://itunes.apple.com/us/app/father-sterling-comic/id349426110?mt=8">Father Sterling</a> - a collaborative art experiment</li>
+			<li><a href="https://itunes.apple.com/us/app/securely-password-vault/id470475299?mt=8">Securely</a> - the first password keychain to utilize iCloud</li>
+			<li><a href="https://itunes.apple.com/us/app/ohsnap-for-facebook/id492812877?mt=8">Oh Snap!</a> - the first photo app to post to facebook (built when facebook didn't have an iPad app)</li>
+			<li><a href="https://itunes.apple.com/us/app/clown-harder/id389462328?mt=8">Clown Harder</a> - a remix of the classic circus game built to use gamecenter on its launch</li>
+			<li><a href="https://itunes.apple.com/us/app/meatball-madness!/id366609897?mt=8">Meatball Madness</a> - built for the launch of Apple's iPad</li>
+		</ul>
 	</header>
 
 <!-- BLOG THIS TO HELP CREATE AND ORGANIZE THE CONTENT -->
