comments and title text added to our apps and experiments

--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
 
 <body>
 	<header>
+	<!-- DOCUMENT HEADING -->
 		<h1>
 			We make amazing apps
 		</h1>
+	<!-- DAPPER GENTLEMEN SUBHEADING -->
 		<p itemscope itemtype="http://schema.org/Organization">
 			<span
 				itemprop="name"
@@ -70,19 +72,21 @@
 				content="info@dappergentlemen.com"
 			>
 		</p>
-
-		<ul> <!-- List of MOBILE APPS http://schema.org/MobileApplication -->
-			<li><a href="https://itunes.apple.com/us/app/2014-lexus-is/id658033876?mt=8">Lexus 2014 IS</a> - Addy award winning app 4.5 stars</li>
-			<li><a href="https://itunes.apple.com/us/app/monsters-invade-oz/id607204560?mt=8">Monsters Invade Oz</a> - Winner of GDC Play 2013, Featured by Apple, Over 4000 5-star reviews</li>
-			<li><a href="https://itunes.apple.com/us/app/ugly-meter/id388336485?mt=8">Ugly Meter</a></li>
-			<!-- EXPERIMENTS -->
-			<li><a href="https://itunes.apple.com/us/app/wordicus-free/id395403495?mt=8">Wordicus</a> - the first multiplayer multilanguage word game</li>
-			<li><a href="https://itunes.apple.com/us/app/free-flashlight/id389960409?mt=8">Free Flashlight</a> - one of the first flashlight apps back when the iPhone didn't come with one</li>
-			<li><a href="https://itunes.apple.com/us/app/father-sterling-comic/id349426110?mt=8">Father Sterling</a> - a collaborative art experiment</li>
-			<li><a href="https://itunes.apple.com/us/app/securely-password-vault/id470475299?mt=8">Securely</a> - the first password keychain to utilize iCloud</li>
-			<li><a href="https://itunes.apple.com/us/app/ohsnap-for-facebook/id492812877?mt=8">Oh Snap!</a> - the first photo app to post to facebook (built when facebook didn't have an iPad app)</li>
-			<li><a href="https://itunes.apple.com/us/app/clown-harder/id389462328?mt=8">Clown Harder</a> - a remix of the classic circus game built to use gamecenter on its launch</li>
-			<li><a href="https://itunes.apple.com/us/app/meatball-madness!/id366609897?mt=8">Meatball Madness</a> - built for the launch of Apple's iPad</li>
+	<!-- LIST OF OUR MOBILE APPS http://schema.org/MobileApplication -->
+		<ul> 
+			<li><a href="https://itunes.apple.com/us/app/2014-lexus-is/id658033876?mt=8" title="Addy award winning app with an average rating of 4.5 stars we built to help launch the new 2014 Lexus IS">Lexus 2014 IS</a></li>
+			<li><a href="https://itunes.apple.com/us/app/monsters-invade-oz/id607204560?mt=8" title="Winner of GDC Play 2013, Featured by Apple in New and Noteworthy, Over 4000 5-star reviews!">Monsters Invade Oz</a></li>
+			<li><a href="https://itunes.apple.com/us/app/ugly-meter/id388336485?mt=8" title="Featured by Howard Stern, Anderson Cooper, Jay Leno, Ellen Degeneres and hundreds more! Downloaded more than 10 million times and #1 app in every country!">Ugly Meter</a></li>
+		</ul>
+	<!-- LIST OF OUR EXPERIMENTS -->
+		<ul>
+			<li><a href="https://itunes.apple.com/us/app/wordicus-free/id395403495?mt=8" title="The first multi-language word game built on a custom asynchronous game engine.">Wordicus</a> - the first multiplayer multilanguage word game</li>
+			<li><a href="https://itunes.apple.com/us/app/free-flashlight/id389960409?mt=8" title="One of the first free flashlight apps built to utilize the iPhone LED flash before Apple offered one">Free Flashlight</a></li>
+			<li><a href="https://itunes.apple.com/us/app/father-sterling-comic/id349426110?mt=8" title="A collaborative art and story experiment with hundreds of artists, built for the launch of Apple's app store.">Father Sterling</a></li>
+			<li><a href="https://itunes.apple.com/us/app/securely-password-vault/id470475299?mt=8" title="We built Securely to launch with Apple's iCloud platform. It was the first password app to sync with iCloud.">Securely</a></li>
+			<li><a href="https://itunes.apple.com/us/app/ohsnap-for-facebook/id492812877?mt=8" title="Facebook photo app we built to solve the problem of the official facebook app not allowing photo posts and the absence of an official iPad app.">Oh Snap!</a></li>
+			<li><a href="https://itunes.apple.com/us/app/clown-harder/id389462328?mt=8" title="A remix of the classic Circus game we built to launch with Apple's Game Center platform">Clown Harder</a></li>
+			<li><a href="https://itunes.apple.com/us/app/meatball-madness!/id366609897?mt=8" title="A classic game rebuilt with updated mechanics for the launch of Apple's iPad">Meatball Madness</a></li>
 		</ul>
 	</header>
 
