--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
 				<li>Agile development</li>
 			</ul> -->
 
-<h2>We are smart (and handsome)</h2>
+<h2>We Innovate</h2>
+	<h3>List of our firsts from apps</h3>
 <!-- MOBILEMAGIC -->
 	<h3>List of iOS, Android and Windows Phone technologies we know and use</h3>
 		<p>Whether you need to build full native or cross-platform mobile apps, 
