--- a/index.html
+++ b/index.html
@@ -112,8 +112,7 @@
 				<li>Agile development</li>
 			</ul> -->
 
-<h2>We Innovate</h2>
-	<h3>List of our firsts from apps</h3>
+<h2>We Are Smart (and Handsome)</h2>
 <!-- MOBILEMAGIC -->
 	<h3>List of iOS, Android and Windows Phone technologies we know and use</h3>
 		<p>Whether you need to build full native or cross-platform mobile apps, 
@@ -597,7 +596,21 @@
 	<h3>List of cloud technologies we work with</h3>
 		<p>So much magic to be built on the back-end.</p>
 		<ul>
-			b
+			<li
+				itemscope
+				itemtype="http://schema.org/SoftwareApplication"
+			>
+				AWS Deployment (
+				<span
+					itemprop="name"
+			>
+					Amazon Web Services
+				</span>)
+				<meta
+					itemprop="url"
+					content="http://aws.amazon.com/"
+				>
+			</li>
 			<li>Azure Deployment</li>
 			<li>Scalable Infrastructures</li>
 			<li>Performance Optimization</li>
@@ -608,7 +621,7 @@
 			<li>PostgreSQL</li>
 		</ul>
 
-<h2>We are talented (plus we work hard)</h2> <!-- SCHEMA AWARDS http://schema.org/award -->
+<h2>We Are Talented (Plus We Work Hard)</h2> <!-- SCHEMA AWARDS http://schema.org/award -->
 	<p>You don't need to take our word for it, see some of the awards and 
 	praises we have recently received.</p>
 
