Azure microdata and added Amazon publisher to aws

--- a/index.html
+++ b/index.html
@@ -610,8 +610,37 @@
 					itemprop="url"
 					content="http://aws.amazon.com/"
 				>
+				<span
+					itemprop="publisher"
+					itemscope
+					itemtype="http://schema.org/Organization"
+				>
+					<meta
+						itemprop="name"
+						content="Amazon"
+				>
 			</li>
-			<li>Azure Deployment</li>
+			<li
+				itemscope
+				itemtype="http://schema.org/SoftwareApplication"
+			>
+				<span
+					itemprop="name"
+				>
+					Azure
+				</span>
+				Deployment
+				<span
+					itemprop="publisher"
+					itemscope
+					itemtype="http://schema.org/Organization"
+				>
+					<meta
+						itemprop="name"
+						content="Microsoft"
+				>
+				</span>
+			</li>			
 			<li>Scalable Infrastructures</li>
 			<li>Performance Optimization</li>
 			<li>iCloud</li>
