apple icloud microdata

--- a/index.html
+++ b/index.html
@@ -643,7 +643,30 @@
 			</li>			
 			<li>Scalable Infrastructures</li>
 			<li>Performance Optimization</li>
-			<li>iCloud</li>
+			<span
+				itemscope
+				itemtype="http://schema.org/SoftwareApplication"
+			>
+				<li
+					itemprop="name"
+				>
+					iCloud
+				</li>
+				<span
+					itemprop="publisher"
+					itemscope
+					itemtype="http://schema.org/Organization"
+				>
+					<meta
+						itemprop="name"
+						content="Apple"
+					>
+				</span>
+				<meta
+					itemprop="url"
+					content="https://www.icloud.com/"
+				>
+			</span>
 			<li>LAMP (Linux / Apache / MySQL / PHP)</li>
 			<li>MEAN (MongoDB / express / AngularJS / nodeJS)</li>
 			<li>NoSQL (Redis / CouchDB / Cassandra / Hadoop / MongoDB)</li>
