LAMP microdata added

--- a/index.html
+++ b/index.html
@@ -619,6 +619,7 @@
 						itemprop="name"
 						content="Amazon"
 				>
+				</span>
 			</li>
 			<li
 				itemscope
@@ -667,7 +668,107 @@
 					content="https://www.icloud.com/"
 				>
 			</span>
-			<li>LAMP (Linux / Apache / MySQL / PHP)</li>
+			<li>LAMP (
+				<span
+					itemscope
+					itemtype="http://schema.org/SoftwareApplication"
+				>
+					<span
+						itemprop="name"
+					>
+						Linux
+					</span>
+					<meta
+						itemprop="url"
+						content="http://www.linux.com/"
+					>
+					<span
+						itemprop="publisher"
+						itemscope
+						itemtype="http://schema.org/Organization"
+					>
+						<meta
+							itemprop="name"
+							content="The Linux Foundation"
+					>
+					</span>
+				</span>
+				/ 
+				<span
+					itemscope
+					itemtype="http://schema.org/SoftwareApplication"
+				>
+					<span 
+						itemprop="name"
+					>
+						Apache
+					</span>
+					<meta
+						itemprop="url"
+						content="http://httpd.apache.org/"
+					>
+					<span
+						itemprop="publisher"
+						itemscope
+						itemtype="http://schema.org/Organization"
+					>
+						<meta
+							itemprop="name"
+							content="The Apache Software Foundation"
+					>
+					</span>
+				</span>
+				/ 
+				<span
+					itemscope
+					itemtype="http://schema.org/SoftwareApplication"
+				>
+					<span
+						itemprop="name"
+					>
+						MySQL
+					</span>
+					<meta
+						itemprop="url"
+						content="http://www.mysql.com/"
+					>
+					<span
+						itemprop="publisher"
+						itemscope
+						itemtype="http://schema.org/Organization"
+					>
+						<meta
+							itemprop="name"
+							content="Oracle"
+					>
+					</span>
+				</span>
+				/ 
+				<span
+					itemscope
+					itemtype="http://schema.org/SoftwareApplication"
+				>
+					<span
+						itemprop="name"
+					>
+						PHP
+					</span>
+					<meta
+						itemprop="url"
+						content="http://php.net/"
+					>
+					<span
+						itemprop="publisher"
+						itemscope
+						itemtype="http://schema.org/Organization"
+					>
+						<meta
+							itemprop="name"
+							content="The PHP Group"
+					>
+					</span>
+				</span>)
+			</li>
 			<li>MEAN (MongoDB / express / AngularJS / nodeJS)</li>
 			<li>NoSQL (Redis / CouchDB / Cassandra / Hadoop / MongoDB)</li>
 			<li>PostgreSQL</li>
