microdata added for mean

--- a/index.html
+++ b/index.html
@@ -769,7 +769,28 @@
 					</span>
 				</span>)
 			</li>
-			<li>MEAN (MongoDB / express / AngularJS / nodeJS)</li>
+			<li>
+				<span itemscope itemtype="http://schema.org/SoftwareApplication">
+				<span itemprop="name">MEAN</span>
+				</span>
+				(
+				<span itemscope itemtype="http://schema.org/SoftwareApplication">
+				<span itemprop="name">MongoDB</span>
+				</span>
+				/ 
+				<span itemscope itemtype="http://schema.org/SoftwareApplication">
+				<span itemprop="name">express</span>
+				</span>
+				/ 
+				<span itemscope itemtype="http://schema.org/SoftwareApplication">
+				<span itemprop="name">AngularJS</span>
+				</span>
+				/ 
+				<span itemscope itemtype="http://schema.org/SoftwareApplication">
+				<span itemprop="name">nodeJS</span>
+				</span>
+				)
+			</li>
 			<li>NoSQL (Redis / CouchDB / Cassandra / Hadoop / MongoDB)</li>
 			<li>PostgreSQL</li>
 		</ul>
