updated mean microdata

--- a/index.html
+++ b/index.html
@@ -772,22 +772,82 @@
 			<li>
 				<span itemscope itemtype="http://schema.org/SoftwareApplication">
 				<span itemprop="name">MEAN</span>
+					<meta
+						itemprop="url"
+						content="http://mean.io"
+					>
+					<span
+						itemprop="publisher"
+						itemscope
+						itemtype="http://schema.org/Organization"
+					>
+						<meta
+							itemprop="name"
+							content="Linnovate"
+					>
+					</span>
 				</span>
 				(
 				<span itemscope itemtype="http://schema.org/SoftwareApplication">
 				<span itemprop="name">MongoDB</span>
+					<meta
+						itemprop="url"
+						content="http://www.mongodb.org/"
+					>
+					<span
+						itemprop="publisher"
+						itemscope
+						itemtype="http://schema.org/Organization"
+					>
+						<meta
+							itemprop="name"
+							content="MongoDB Inc"
+					>
+					</span>
 				</span>
 				/ 
 				<span itemscope itemtype="http://schema.org/SoftwareApplication">
 				<span itemprop="name">express</span>
+					<meta
+						itemprop="url"
+						content="http://expressjs.com/"
+					>
 				</span>
 				/ 
 				<span itemscope itemtype="http://schema.org/SoftwareApplication">
 				<span itemprop="name">AngularJS</span>
+					<meta
+						itemprop="url"
+						content="https://angularjs.org/"
+					>
+					<span
+						itemprop="publisher"
+						itemscope
+						itemtype="http://schema.org/Organization"
+					>
+						<meta
+							itemprop="name"
+							content="Google"
+					>
+					</span>
 				</span>
 				/ 
 				<span itemscope itemtype="http://schema.org/SoftwareApplication">
 				<span itemprop="name">nodeJS</span>
+					<meta
+						itemprop="url"
+						content="http://nodejs.org/"
+					>
+					<span
+						itemprop="publisher"
+						itemscope
+						itemtype="http://schema.org/Organization"
+					>
+						<meta
+							itemprop="name"
+							content="Joynet Inc"
+					>
+					</span>
 				</span>
 				)
 			</li>
