nosql microdata pasted

--- a/index.html
+++ b/index.html
@@ -851,7 +851,17 @@
 				</span>
 				)
 			</li>
-			<li>NoSQL (Redis / CouchDB / Cassandra / Hadoop / MongoDB)</li>
+			<li>NoSQL (
+<span itemscope itemtype="http://schema.org/SoftwareApplication">
+<span itemprop="name">Redis</span> </span>/ 
+<span itemscope itemtype="http://schema.org/SoftwareApplication">
+<span itemprop="name">CouchDB</span> </span>/ 
+<span itemscope itemtype="http://schema.org/SoftwareApplication">
+<span itemprop="name">Cassandra</span> </span>/ 
+<span itemscope itemtype="http://schema.org/SoftwareApplication">
+<span itemprop="name">Hadoop</span> </span>/ 
+<span itemscope itemtype="http://schema.org/SoftwareApplication">
+<span itemprop="name">MongoDB</span></span>)</li>
 			<li>PostgreSQL</li>
 		</ul>
 
