--- a/index.html
+++ b/index.html
@@ -852,16 +852,31 @@
 				)
 			</li>
 			<li>NoSQL (
-<span itemscope itemtype="http://schema.org/SoftwareApplication">
-<span itemprop="name">Redis</span> </span>/ 
-<span itemscope itemtype="http://schema.org/SoftwareApplication">
-<span itemprop="name">CouchDB</span> </span>/ 
-<span itemscope itemtype="http://schema.org/SoftwareApplication">
-<span itemprop="name">Cassandra</span> </span>/ 
-<span itemscope itemtype="http://schema.org/SoftwareApplication">
-<span itemprop="name">Hadoop</span> </span>/ 
-<span itemscope itemtype="http://schema.org/SoftwareApplication">
-<span itemprop="name">MongoDB</span></span>)</li>
+				<span itemscope itemtype="http://schema.org/SoftwareApplication">
+					<span itemprop="name">Redis
+					</span>
+				</span>
+				/ 
+				<span itemscope itemtype="http://schema.org/SoftwareApplication">
+					<span itemprop="name">CouchDB
+					</span>
+				</span>
+				/ 
+				<span itemscope itemtype="http://schema.org/SoftwareApplication">
+					<span itemprop="name">Cassandra
+					</span>
+				</span>
+				/ 
+				<span itemscope itemtype="http://schema.org/SoftwareApplication">
+					<span itemprop="name">Hadoop</span>
+				</span>
+				/ 
+				<span itemscope itemtype="http://schema.org/SoftwareApplication">
+					<span itemprop="name">MongoDB
+					</span>
+				</span>
+				)
+			</li>
 			<li>PostgreSQL</li>
 		</ul>
 
