updated nosql microdata

--- a/index.html
+++ b/index.html
@@ -853,26 +853,91 @@
 			</li>
 			<li>NoSQL (
 				<span itemscope itemtype="http://schema.org/SoftwareApplication">
-					<span itemprop="name">Redis
+					<span itemprop="name">
+						Redis
+					</span>
+					<meta
+						itemprop="url"
+						content="http://redis.io/"
+					>
+				</span>
+				/ 
+				<span itemscope itemtype="http://schema.org/SoftwareApplication">
+					<span itemprop="name">
+						CouchDB
+					</span>
+					<meta
+						itemprop="url"
+						content="http://couchdb.apache.org/"
+					>
+					<span
+						itemprop="publisher"
+						itemscope
+						itemtype="http://schema.org/Organization"
+					>
+						<meta
+							itemprop="name"
+							content="The Apache Software Foundation"
+					>
 					</span>
 				</span>
 				/ 
 				<span itemscope itemtype="http://schema.org/SoftwareApplication">
-					<span itemprop="name">CouchDB
+					<span itemprop="name">
+						Cassandra
+					</span>
+					<meta
+						itemprop="url"
+						content="http://cassandra.apache.org/"
+					>
+					<span
+						itemprop="publisher"
+						itemscope
+						itemtype="http://schema.org/Organization"
+					>
+						<meta
+							itemprop="name"
+							content="The Apache Software Foundation"
+					>
 					</span>
 				</span>
 				/ 
 				<span itemscope itemtype="http://schema.org/SoftwareApplication">
-					<span itemprop="name">Cassandra
+					<span itemprop="name">
+						Hadoop
 					</span>
-				</span>
-				/ 
-				<span itemscope itemtype="http://schema.org/SoftwareApplication">
-					<span itemprop="name">Hadoop</span>
+					<meta
+						itemprop="url"
+						content="http://hadoop.apache.org/"
+					>
+					<span
+						itemprop="publisher"
+						itemscope
+						itemtype="http://schema.org/Organization"
+					>
+						<meta
+							itemprop="name"
+							content="The Apache Software Foundation"
+					>
+					</span>
 				</span>
 				/ 
 				<span itemscope itemtype="http://schema.org/SoftwareApplication">
 					<span itemprop="name">MongoDB
+					</span>
+					<meta
+						itemprop="url"
+						content="http://www.mongodb.org/"
+					>
+					<span
+						itemprop="publisher"
+						itemscope
+						itemtype="http://schema.org/Organization"
+					>
+						<meta
+							itemprop="name"
+							content="MongoDB Inc"
+					>
 					</span>
 				</span>
 				)
