--- a/index.html
+++ b/index.html
@@ -942,7 +942,13 @@
 				</span>
 				)
 			</li>
-			<li>PostgreSQL</li>
+			<span itemscope itemtype="http://schema.org/SoftwareApplication">
+				<li itemprop="name">PostgreSQL</li>
+				<meta itemprop="downloadUrl" content="http://www.postgresql.org/download/">
+				<span itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
+				<meta itemprop="name" content="The PostgreSQL Global Development Group"></span>
+				<meta itemprop="url" content="http://www.postgresql.org/">
+			</span>
 		</ul>
 
 <h2>We Are Talented (Plus We Work Hard)</h2> <!-- SCHEMA AWARDS http://schema.org/award -->
