the cloud formatting done

--- a/index.html
+++ b/index.html
@@ -770,8 +770,15 @@
 				</span>)
 			</li>
 			<li>
-				<span itemscope itemtype="http://schema.org/SoftwareApplication">
-				<span itemprop="name">MEAN</span>
+				<span
+					itemscope 
+					itemtype="http://schema.org/SoftwareApplication"
+				>
+					<span
+						itemprop="name"
+					>
+						MEAN
+					</span>
 					<meta
 						itemprop="url"
 						content="http://mean.io"
@@ -788,8 +795,15 @@
 					</span>
 				</span>
 				(
-				<span itemscope itemtype="http://schema.org/SoftwareApplication">
-				<span itemprop="name">MongoDB</span>
+				<span 
+					itemscope 
+					itemtype="http://schema.org/SoftwareApplication"
+				>
+					<span 
+						itemprop="name"
+					>
+						MongoDB
+					</span>
 					<meta
 						itemprop="url"
 						content="http://www.mongodb.org/"
@@ -806,16 +820,30 @@
 					</span>
 				</span>
 				/ 
-				<span itemscope itemtype="http://schema.org/SoftwareApplication">
-				<span itemprop="name">express</span>
+				<span
+					itemscope
+					itemtype="http://schema.org/SoftwareApplication"
+				>
+					<span
+						itemprop="name"
+					>
+						express
+					</span>
 					<meta
 						itemprop="url"
 						content="http://expressjs.com/"
 					>
 				</span>
 				/ 
-				<span itemscope itemtype="http://schema.org/SoftwareApplication">
-				<span itemprop="name">AngularJS</span>
+				<span
+					itemscope 
+					itemtype="http://schema.org/SoftwareApplication"
+				>
+					<span 
+						itemprop="name"
+					>
+						AngularJS
+					</span>
 					<meta
 						itemprop="url"
 						content="https://angularjs.org/"
@@ -832,8 +860,15 @@
 					</span>
 				</span>
 				/ 
-				<span itemscope itemtype="http://schema.org/SoftwareApplication">
-				<span itemprop="name">nodeJS</span>
+				<span 
+					itemscope 
+					itemtype="http://schema.org/SoftwareApplication"
+				>
+					<span 
+						itemprop="name"
+					>
+						nodeJS
+					</span>
 					<meta
 						itemprop="url"
 						content="http://nodejs.org/"
@@ -851,9 +886,15 @@
 				</span>
 				)
 			</li>
-			<li>NoSQL (
-				<span itemscope itemtype="http://schema.org/SoftwareApplication">
-					<span itemprop="name">
+			<li>
+				NoSQL (
+				<span 
+					itemscope 
+					itemtype="http://schema.org/SoftwareApplication"
+				>
+					<span 
+						itemprop="name"
+					>
 						Redis
 					</span>
 					<meta
@@ -862,8 +903,13 @@
 					>
 				</span>
 				/ 
-				<span itemscope itemtype="http://schema.org/SoftwareApplication">
-					<span itemprop="name">
+				<span 
+					itemscope 
+					itemtype="http://schema.org/SoftwareApplication"
+				>
+					<span 
+						itemprop="name"
+					>
 						CouchDB
 					</span>
 					<meta
@@ -882,8 +928,13 @@
 					</span>
 				</span>
 				/ 
-				<span itemscope itemtype="http://schema.org/SoftwareApplication">
-					<span itemprop="name">
+				<span 
+					itemscope 
+					itemtype="http://schema.org/SoftwareApplication"
+				>
+					<span 
+						itemprop="name"
+					>
 						Cassandra
 					</span>
 					<meta
@@ -902,8 +953,13 @@
 					</span>
 				</span>
 				/ 
-				<span itemscope itemtype="http://schema.org/SoftwareApplication">
-					<span itemprop="name">
+				<span 
+					itemscope 
+					itemtype="http://schema.org/SoftwareApplication"
+				>
+					<span 
+						itemprop="name"
+					>
 						Hadoop
 					</span>
 					<meta
@@ -922,8 +978,14 @@
 					</span>
 				</span>
 				/ 
-				<span itemscope itemtype="http://schema.org/SoftwareApplication">
-					<span itemprop="name">MongoDB
+				<span 
+					itemscope 
+					itemtype="http://schema.org/SoftwareApplication"
+				>
+					<span 
+						itemprop="name"
+					>
+						MongoDB
 					</span>
 					<meta
 						itemprop="url"
@@ -942,12 +1004,33 @@
 				</span>
 				)
 			</li>
-			<span itemscope itemtype="http://schema.org/SoftwareApplication">
-				<li itemprop="name">PostgreSQL</li>
-				<meta itemprop="downloadUrl" content="http://www.postgresql.org/download/">
-				<span itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
-				<meta itemprop="name" content="The PostgreSQL Global Development Group"></span>
-				<meta itemprop="url" content="http://www.postgresql.org/">
+			<span 
+				itemscope 
+				itemtype="http://schema.org/SoftwareApplication"
+			>
+				<li
+					itemprop="name"
+				>
+					PostgreSQL
+				</li>
+					<meta 
+						itemprop="downloadUrl" 
+						content="http://www.postgresql.org/download/"
+					>
+					<span 
+						itemprop="publisher" 
+						itemscope 
+						itemtype="http://schema.org/Organization"
+					>
+						<meta 
+							itemprop="name" 
+							content="The PostgreSQL Global Development Group"
+						>
+					</span>
+				<meta 
+					itemprop="url" 
+					content="http://www.postgresql.org/"
+				>
 			</span>
 		</ul>
 
