we are smart section changed to achievements unlocked, brainstorm some titles later, also make some amusing cheeves

--- a/index.html
+++ b/index.html
@@ -1034,26 +1034,19 @@
 			</span>
 		</ul>
 
-<h2>We Are Talented (Plus We Work Hard)</h2> <!-- SCHEMA AWARDS http://schema.org/award -->
-	<p>You don't need to take our word for it, see some of the awards and 
-	praises we have recently received.</p>
+<h2>Achievements Unlocked</h2> <!-- SCHEMA AWARDS http://schema.org/award -->
+	<p>See some of the awards and praises we have recently received.</p>
 
-	<h3>Number of countries in which our apps have reached the #1 spot</h3>
-		<ul>
-			<li>148</li>
-		</ul>
+	<!-- Theese neeeed someeeee good tiilttles -->
+	#1 in 148 Countries
+	Won 2013 GDC Best in Play
+	Featured by Apple
+	Won 2014 Gold Addy
+	Over 1mil dls
+	Over 5ml dls
+	Over 10mdls
+	Some silly ones
 
-	<h3>Honors and Awards</h3> 
-		<ul>
-			<li>Winner: 2013 GDC Best in Play</li>
-			<li>Featured: Apple New and Noteworthy</li>
-			<li>Winner: 2014 Gold Addy</li>
-		</ul>
-
-	<h3>Number of people using our apps</h3>
-		<ul>
-			<li>LARGE COUNTER THAT KEEPS INCREASING</li>
-		</ul>
 
 <h2>Our clients trust us</h2>
 	<p>If you look good, we look good, and we like looking good.</p>
