news feed reminder added

--- a/index.html
+++ b/index.html
@@ -89,6 +89,10 @@
 			<li><a href="https://itunes.apple.com/us/app/meatball-madness!/id366609897?mt=8" title="A classic game rebuilt with updated mechanics for the launch of Apple's iPad">Meatball Madness</a></li>
 		</ul>
 	</header>
+<!-- NEWS UPDATES -->
+	<section>
+		<!-- FIGURE OUT HOW TO PULL TITLE AND DESCRIPTION OF LATEST FROM RSS FEED -->
+	</section>
 
 <!-- BLOG THIS TO HELP CREATE AND ORGANIZE THE CONTENT -->
 
@@ -1045,8 +1049,11 @@
 	Over 1mil dls
 	Over 5ml dls
 	Over 10mdls
+	Howard Stern
+	Jay Leno
+	Anderson Cooper
 	Some silly ones
-
+	Buys every new device because we 'need it for work'
 
 <h2>Our clients trust us</h2>
 	<p>If you look good, we look good, and we like looking good.</p>
