image placeholders in clients added

--- a/index.html
+++ b/index.html
@@ -1058,13 +1058,13 @@
 <h2>Our clients trust us</h2>
 	<p>If you look good, we look good, and we like looking good.</p>
 	<ul>
-		<li>Lexus</li>
-		<li>Microsoft</li>
-		<li>ESPN</li>
-		<li>Disney</li>
-		<li>Little Box</li>
-		<li>Keyser</li>
-		<li>PixelChat</li>
+		<li><img src="img/lexus.png">Lexus</li>
+		<li><img src="img/microsoft.png">Microsoft</li>
+		<li><img src="img/espnlexus.png">ESPN</li>
+		<li><img src="img/disney.png">Disney</li>
+		<li><img src="img/littlebox.png">Little Box</li>
+		<li><img src="img/keyser.png">Keyser</li>
+		<li><img src="img/pixelchat.png">PixelChat</li>
 	</ul>
 
 <h2>Get in touch</h2>
