name changed to legalname, microdata started for lexus

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	<!-- DAPPER GENTLEMEN SUBHEADING -->
 		<p itemscope itemtype="http://schema.org/Organization">
 			<span
-				itemprop="name"
+				itemprop="legalName"
 			>
 				Dapper Gentlemen
 			</span>
@@ -1058,7 +1058,19 @@
 <h2>Our clients trust us</h2>
 	<p>If you look good, we look good, and we like looking good.</p>
 	<ul>
-		<li><img src="img/lexus.png">Lexus</li>
+		<li
+			itemscope
+			itemtype="http://schema.org/Organization"
+		>
+			<img
+				src="img/lexus.png"
+			>
+			<span
+				itemprop="legalName"
+			>
+				Lexus
+			</span>
+		</li>
 		<li><img src="img/microsoft.png">Microsoft</li>
 		<li><img src="img/espnlexus.png">ESPN</li>
 		<li><img src="img/disney.png">Disney</li>
