logo microdata added on lexus

--- a/index.html
+++ b/index.html
@@ -1062,9 +1062,13 @@
 			itemscope
 			itemtype="http://schema.org/Organization"
 		>
-			<img
-				src="img/lexus.png"
+			<span
+				itemprop="logo"
 			>
+				<img
+					src="img/lexus.png"
+				>
+			</span>
 			<span
 				itemprop="legalName"
 			>
