lexus changed from org to corp in microdata

--- a/index.html
+++ b/index.html
@@ -1060,7 +1060,7 @@
 	<ul>
 		<li
 			itemscope
-			itemtype="http://schema.org/Organization"
+			itemtype="http://schema.org/Corporation"
 		>
 			<span
 				itemprop="logo"
