corp changed to org for lexus, microdata for toyota brand added

--- a/index.html
+++ b/index.html
@@ -1060,7 +1060,7 @@
 	<ul>
 		<li
 			itemscope
-			itemtype="http://schema.org/Corporation"
+			itemtype="http://schema.org/Organization"
 		>
 			<span
 				itemprop="logo"
@@ -1074,6 +1074,10 @@
 			>
 				Lexus
 			</span>
+			<meta
+				itemprop="brand"
+				content="Toyota Motor Corp"
+			>
 		</li>
 		<li><img src="img/microsoft.png">Microsoft</li>
 		<li><img src="img/espnlexus.png">ESPN</li>
