microdata for clients

--- a/index.html
+++ b/index.html
@@ -1078,13 +1078,149 @@
 				itemprop="brand"
 				content="Toyota Motor Corp"
 			>
+			<meta
+				itemprop="url"
+				content="http://lexus.com"
+			>
 		</li>
-		<li><img src="img/microsoft.png">Microsoft</li>
-		<li><img src="img/espnlexus.png">ESPN</li>
-		<li><img src="img/disney.png">Disney</li>
-		<li><img src="img/littlebox.png">Little Box</li>
-		<li><img src="img/keyser.png">Keyser</li>
-		<li><img src="img/pixelchat.png">PixelChat</li>
+		<li
+			itemscope
+			itemtype="http://schema.org/Organization"
+		>
+			<span
+				itemprop="logo"
+			>
+				<img
+					src="img/microsoft.png"
+				>
+			</span>
+			<span
+				itemprop="legalName"
+			>
+				Microsoft
+			</span>
+			<meta
+				itemprop="brand"
+				content="Microsoft Inc"
+			>
+			<meta
+				itemprop="url"
+				content="http://microsoft.com"
+			>
+		</li>
+		<li
+			itemscope
+			itemtype="http://schema.org/Organization"
+		>
+			<span
+				itemprop="logo"
+			>
+				<img
+					src="img/espn.png"
+				>
+			</span>
+			<span
+				itemprop="legalName"
+			>
+				ESPN
+			</span>
+			<meta
+				itemprop="brand"
+				content="ESPN Internet Ventures"
+			>
+			<meta
+				itemprop="url"
+				content="http://espn.go.com/"
+			>
+		</li>
+		<li
+			itemscope
+			itemtype="http://schema.org/Organization"
+		>
+			<span
+				itemprop="logo"
+			>
+				<img
+					src="img/disney.png"
+				>
+			</span>
+			<span
+				itemprop="legalName"
+			>
+				Disney
+			</span>
+			<meta
+				itemprop="brand"
+				content="Disney"
+			>
+			<meta
+				itemprop="url"
+				content="http://disney.com/"
+			>
+		</li>
+		<li
+			itemscope
+			itemtype="http://schema.org/Organization"
+		>
+			<span
+				itemprop="logo"
+			>
+				<img
+					src="img/littlebox.png"
+				>
+			</span>
+			<span
+				itemprop="legalName"
+			>
+				Little Box
+			</span>
+			<meta
+				itemprop="url"
+				content="http://littleboxapps.com/"
+			>
+		</li>
+		<li
+			itemscope
+			itemtype="http://schema.org/Organization"
+		>
+			<span
+				itemprop="logo"
+			>
+				<img
+					src="img/keyser.png"
+				>
+			</span>
+			<span
+				itemprop="legalName"
+			>
+				Keyser
+			</span>
+			<meta
+				itemprop="url"
+				content="http://www.keyserco.com/"
+			>
+		</li>
+		<li
+			itemscope
+			itemtype="http://schema.org/Organization"
+		>
+			<span
+				itemprop="logo"
+			>
+				<img
+					src="img/pixelchat.png"
+				>
+			</span>
+			<span
+				itemprop="legalName"
+			>
+				Pixelchat
+			</span>
+			<meta
+				itemprop="url"
+				content="http://www.pixelchatapp.com/"
+			>
+		</li>
 	</ul>
 
 <h2>Get in touch</h2>
