--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 		name="description"
 		content="Dapper Gentlemen knows mobile design and development can be complex for startups and enterprise companies. Learn how we make it simple."
 	>
+	<link rel="stylesheet" href="style/css/normalize.css">
+	<link rel="stylesheet" href="style/css/style.css">
 	<title>
 		We Make Award-Winning Apps at Dapper Gentlemen
 	</title>
@@ -24,7 +26,52 @@
 </head>
 
 <body>
-	<header>
+<!-- NAV -->
+	<nav class="flex-nav flex-nav__parent">
+
+		<div class="flex-nav">
+			<div
+				class="cell"
+			>
+				Dapper Gentlemen
+			</div>
+
+		</div>
+
+		<div class="flex-nav">
+			<a
+				href="#"
+			>
+				<div
+					class="cell"
+				>
+					Articles
+				</div>
+			</a>
+			<div
+				class="cell"
+			>
+				Experience
+			</div>
+			<div
+				class="cell"
+			>
+				Awards
+			</div>
+			<div
+				class="cell"
+			>
+				Clients
+			</div>
+			<div
+				class="cell"
+			>
+				Hello
+			</div>
+		</div>
+	</nav>
+<!-- HEADER -->
+	<header class="header-main">
 	<!-- DOCUMENT HEADING -->
 		<h1>
 			We make amazing apps
