Nav linked and swapped a nav and div tag

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <body>
 <!-- NAV -->
-	<nav class="flex-nav flex-nav__parent">
+	<div class="flex-nav flex-nav__parent">
 
 		<div class="flex-nav">
 			<div
@@ -38,7 +38,7 @@
 
 		</div>
 
-		<div class="flex-nav">
+		<nav class="flex-nav">
 			<a
 				href="#"
 			>
@@ -48,28 +48,44 @@
 					Articles
 				</div>
 			</a>
-			<div
-				class="cell"
+			<a
+				href="#"
 			>
-				Experience
-			</div>
-			<div
-				class="cell"
+				<div
+					class="cell"
+				>
+					Experience
+				</div>
+			</a>
+			<a
+				href="#"
 			>
-				Awards
-			</div>
-			<div
-				class="cell"
+				<div
+					class="cell"
+				>
+					Awards
+				</div>
+			</a>
+			<a
+				href="#"
 			>
-				Clients
-			</div>
-			<div
-				class="cell"
+				<div
+					class="cell"
+				>
+					Clients
+				</div>
+			</a>
+			<a
+				href="#"
 			>
-				Hello
-			</div>
-		</div>
-	</nav>
+				<div
+					class="cell"
+				>
+					Hello
+				</div>
+			</a>
+		</nav>
+	</div>
 <!-- HEADER -->
 	<header class="header-main">
 	<!-- DOCUMENT HEADING -->
