header h1 and subhead styled with margins and google font added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	>
 	<link rel="stylesheet" href="style/css/normalize.css">
 	<link rel="stylesheet" href="style/css/style.css">
+	<link href='http://fonts.googleapis.com/css?family=Droid+Serif:400,700' rel='stylesheet' type='text/css'>
 	<title>
 		We Make Award-Winning Apps at Dapper Gentlemen
 	</title>
@@ -89,11 +90,15 @@
 <!-- HEADER -->
 	<header class="header-main">
 	<!-- DOCUMENT HEADING -->
-		<h1>
+		<h1 class="page-heading">
 			We make amazing apps
 		</h1>
 	<!-- DAPPER GENTLEMEN SUBHEADING -->
-		<p itemscope itemtype="http://schema.org/Organization">
+		<p
+			itemscope
+			itemtype="http://schema.org/Organization"
+			class="page-subhead"
+		>
 			<span
 				itemprop="legalName"
 			>
