--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 			>
 				Dapper Gentlemen
 			</span>
-			is an award-winning mobile and web development studio located in 
+			is an award-winning mobile and<br>web development studio located in 
 			<span
 				itemprop="address"
 				itemscope itemtype="http://schema.org/PostalAddress"
