cyoa begin experimenting
this method fills the screen with vmin and vmax - needs orientation
media query

--- a/index.html
+++ b/index.html
@@ -34,6 +34,15 @@
 			<div
 				class="cell"
 			>
+				<img
+					class="flex-nav__logo"
+					src="img/dapperLogo--white.svg"
+				>
+			</div>
+			<div
+				class="cell"
+			>
+
 				Dapper Gentlemen
 			</div>
 
