meta desc and title updated

--- a/current-site/index.html
+++ b/current-site/index.html
@@ -3,7 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-<title>Dapper Gentlemen - Creators of Fine Apps</title>
+<meta
+  name="description"
+  content="Dapper Gentlemen knows mobile design and development can be complex for startups and enterprise companies. Learn how we make it simple."
+>
+<title>We Make Award-Winning Apps at Dapper Gentlemen</title>
 <link rel="shortcut icon" href="http://dappergentlemen.com/favicon.ico?v=2" />
 <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
 <link rel="stylesheet" type="text/css" href="style.css" media="all" />
