--- a/current-site/index.html
+++ b/current-site/index.html
@@ -8,6 +8,15 @@
   content="Dapper Gentlemen knows mobile design and development can be complex for startups and enterprise companies. Learn how we make it simple."
 >
 <title>We Make Award-Winning Apps at Dapper Gentlemen</title>
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-26915880-1', 'auto');
+    ga('send', 'pageview');
+  </script>
 <link rel="shortcut icon" href="http://dappergentlemen.com/favicon.ico?v=2" />
 <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
 <link rel="stylesheet" type="text/css" href="style.css" media="all" />
@@ -288,17 +297,6 @@
   </div>
 </div>
 <!-- End Responsive Menu -->
-<script type="text/javascript">
-
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-26915880-1']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
 
 </script>
 <script type="text/javascript" src="style/js/scripts.js"></script>
