--- a/current-site/index.html
+++ b/current-site/index.html
@@ -19,10 +19,10 @@
   </script>
 <link rel="shortcut icon" href="http://dappergentlemen.com/favicon.ico?v=2" />
 <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
-<link rel="stylesheet" type="text/css" href="style.css" media="all" />
+<link rel="stylesheet" type="text/css" href="style.css" media="all" /> 
 <link rel="stylesheet" type="text/css" href="style/css/color/red.css" media="all" />
 <link rel="stylesheet" type="text/css" href="style/css/media-queries.css" media="all" />
-<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Lato:300,400,900' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="style/type/fontello.css">
 <!--[if IE 8]>
 <link rel="stylesheet" type="text/css" href="style/css/ie8.css" media="all" />
