--- a/current-site/index.html
+++ b/current-site/index.html
@@ -19,7 +19,7 @@
   </script>
 <link rel="shortcut icon" href="http://dappergentlemen.com/favicon.ico?v=2" />
 <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
-<link rel="stylesheet" type="text/css" href="style.css" media="all" /> 
+<link rel="stylesheet" type="text/css" href="style-min.css" media="all" /> 
 <link rel="stylesheet" type="text/css" href="style/css/color/red.css" media="all" />
 <link rel="stylesheet" type="text/css" href="style/css/media-queries.css" media="all" />
 <link href='http://fonts.googleapis.com/css?family=Lato:300,400,900' rel='stylesheet' type='text/css'>
@@ -34,9 +34,9 @@
 <script src="style/js/html5.js" type="text/javascript"></script>
 <![endif]-->
 <script type="text/javascript" src="style/js/jquery.min.js"></script>
-<script type="text/javascript" src="style/js/jquery.easing.js"></script>
+<script type="text/javascript" src="style/js/jquery.easing-min.js"></script>
 <script type="text/javascript" src="style/js/jquery.isotope.min.js"></script>
-<script type="text/javascript" src="style/js/jquery.slickforms.js"></script>
+<script type="text/javascript" src="style/js/jquery.slickforms-min.js"></script>
 <script type="text/javascript" src="style/js/jquery.easytabs.min.js"></script>
 <script type="text/javascript" src="style/js/jquery.fitvids.js"></script>
 <script type="text/javascript" src="style/js/jquery.fancybox.pack.js"></script>
@@ -51,7 +51,7 @@
   <div class="top-wrapper">
     <header>
       <div class="inner">
-        <div class="logo"><a href="index.html"><img src="style/images/logo.png" alt="" /></a></div>
+        <div class="logo"><a href="index.html"><img src="style/images/art/logo.png" alt="" /></a></div>
         <!-- Begin Menu -->
         <nav id="menu" class="menu">
           <ul id="tiny" class="nav">
@@ -284,6 +284,6 @@
 <!-- End Responsive Menu -->
 
 </script>
-<script type="text/javascript" src="style/js/scripts.js"></script>
+<script type="text/javascript" src="style/js/scripts-min.js"></script>
 </body>
 </html>
