--- a/current-site/index.html
+++ b/current-site/index.html
@@ -51,7 +51,7 @@
   <div class="top-wrapper">
     <header>
       <div class="inner">
-        <div class="logo"><a href="index.html"><img src="style/images/art/logo.png" alt="" /></a></div>
+        <div class="logo"><a href="index.html"><img src="style/images/art/logo.png" alt="Dapper Gentlemen Logo" /></a></div>
         <!-- Begin Menu -->
         <nav id="menu" class="menu">
           <ul id="tiny" class="nav">
