Removed testing svgs

--- a/1-1.html
+++ b/1-1.html
@@ -235,7 +235,7 @@
 							/>
 							<rect
 								id="mouth"
-								class="brown__fill--50"
+								class="brown__fill--50 animate1"
 								x="22"
 								y="189"
 								width="5"
