mouth animates open then resets

--- a/1-1.html
+++ b/1-1.html
@@ -233,13 +233,22 @@
 								fill="url(#shadow-hat1)"
 								points="11,140 21,180 51,180 51,140"
 							/>
+							<animate
+								xlink:href="#mouth"
+								attributeName="height"
+								from="2"
+								to="4" 
+								dur=".2s"
+								begin="0s"
+								fill="remove"
+							/>
 							<rect
 								id="mouth"
-								class="brown__fill--50 animate1"
+								class="brown__fill--50 width"
 								x="22"
 								y="189"
-								width="5"
 								height="2"
+								width="5"
 							/>
 							<g id="left-eye">
 								<path
