--- a/1-1.html
+++ b/1-1.html
@@ -73,11 +73,11 @@
 								points="40,187 40,185 30,185 30,201 40,201 40,195 32,195 32,187
 							"/>
 							<rect
-								id="mouth"
+								id="mouth-jo"
 								class="brown__fill--50"
 								x="34"
 								y="189"
-								width="5"
+								width="4"
 								height="2"
 							/>
 							<g
@@ -233,17 +233,8 @@
 								fill="url(#shadow-hat1)"
 								points="11,140 21,180 51,180 51,140"
 							/>
-							<animate
-								xlink:href="#mouth"
-								attributeName="height"
-								from="2"
-								to="4" 
-								dur=".2s"
-								begin="0s"
-								fill="remove"
-							/>
 							<rect
-								id="mouth"
+								id="mouth-ryan"
 								class="brown__fill--50 width"
 								x="22"
 								y="189"
@@ -420,5 +411,31 @@
 				</div>
 			</div>
 		</div>
+		<!-- SVG ANIMATIONS -->
+		<svg>
+			<!-- RYAN'S MOUTH -->
+			<animate
+				xlink:href="#mouth-ryan"
+				attributeName="height"
+				from="2"
+				to="4" 
+				dur=".3s"
+				begin="0s"
+				repeatCount="indefinite"
+				fill="restart"
+			/>
+			<!-- JO'S MOUTH -->
+			<animate
+				xlink:href="#mouth-jo"
+				attributeName="height"
+				from="2"
+				to="4" 
+				dur=".3s"
+				begin=".3s"
+				repeatCount="indefinite"
+				fill="restart"
+			/>
+
+		</svg>
 	</body>
 </html>
