working on positioning in columns

--- a/1-2.html
+++ b/1-2.html
@@ -16,8 +16,9 @@
 				<div class="flex1 column">
 				<!-- SCENE -->
 					<div class="flex2 column overflow-hidden"> <!-- Overflow affects every flexbox in scene -->
-					<div class="flex1">
-					</div>
+						<div class="flex2">
+						<img src="img/svg/avatar-jo__rotate90.svg" alt="">
+						</div>
 					<!-- CHAT BUBBLE -->
 						<div class="flex2 pad20--bottom">
 							<div class="flex1 brown__bg--85 vertical-center border-radius10 pad10">
