--- a/1-2.html
+++ b/1-2.html
@@ -16,9 +16,7 @@
 				<div class="flex1 column">
 				<!-- SCENE -->
 					<div class="flex2 column overflow-hidden"> <!-- Overflow affects every flexbox in scene -->
-						<div class="flex2">
-						<img src="img/svg/avatar-jo__rotate90.svg" alt="">
-						</div>
+						<img class="flex2 svg" src="img/svg/avatar-jo__rotate90.svg" alt="">
 					<!-- CHAT BUBBLE -->
 						<div class="flex2 pad20--bottom">
 							<div class="flex1 brown__bg--85 vertical-center border-radius10 pad10">
