padding changes and word changes

--- a/1-2.html
+++ b/1-2.html
@@ -198,7 +198,7 @@
 						/>
 					</svg>
 				<!-- CHAT BUBBLE -->
-					<div class="flex3 pad20--bottom">
+					<div class="flex3 pad20--bottom pad20--right">
 						<div class="flex1 brown__bg--85 vertical-center border-radius10 pad10">
 						<h1 class="unica-one h1-main brown__color--20">Which Word Best Describes Your App?</h1>
 						</div>
