--- a/1-3.html
+++ b/1-3.html
@@ -17,9 +17,9 @@
 			<!-- SCENE -->
 				<div class="flex2 overflow-hidden"> <!-- Overflow affects every flexbox in scene -->
 				<!-- CHAT BUBBLE -->
-					<div class="flex3 pad20--bottom">
+					<div class="flex3 pad20--bottom pad20--left">
 						<div class="flex1 brown__bg--85 vertical-center border-radius10 pad10">
-						<h1 class="unica-one h1-main brown__color--20">How Should the Design Look?</h1>
+						<h1 class="unica-one h1-main brown__color--20">What Word Best Describes the Design of Your App?</h1>
 						</div>
 					</div>
 				<!-- SVG - RYAN -->
