--- a/1-2.html
+++ b/1-2.html
@@ -40,6 +40,18 @@
 							repeatCount="indefinite"
 							fill="restart"
 						/>
+						<animate 
+							xlink:href="#left-eye_pupil-jo"
+							attributeName="cx"
+							from="31"
+							to="32" 
+							dur="5s"
+							begin="0s"
+							repeatCount="indefinite"
+							fill="restart" 
+							d="circ-anim"
+						/>
+
 						<polygon
 							id="body"
 							class="brown__fill--75"
@@ -146,7 +158,7 @@
 								d="M54,156c0,2.2-1.8,3-4,3s-4-0.8-4-3s1.8-3,4-3S54,153.8,54,156z"
 							/>
 							<path
-								id="right-eye_pupil"
+								id="right-eye_pupil-jo"
 								class="blue__fill--20"
 								d="M51.3,156c0,0.7-0.6,1-1.3,1s-1.3-0.3-1.3-1s0.6-1,1.3-1S51.3,155.3,51.3,156z"
 							/>
@@ -167,7 +179,7 @@
 								c0,0.2,0,0.3,0.1,0.5C26.3,159,28.4,161,31,161z"
 							/>
 							<circle
-								id="left-eye_pupil"
+								id="left-eye_pupil-jo"
 								class="blue__fill--20"
 								cx="31"
 								cy="156"
@@ -208,10 +220,10 @@
 				<div class="flex1 choice-orientation blue__inner-shadow--20 blue__bg--30 pad10 border-radius5"> <!-- CHOICE WRAPER AND BG -->
 				<!-- LEFT COLUMN -->
 					<div class="flex2 column">
-						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="#">
+						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="1-3.html">
 							<p class="vollkorn choice-fontsize blue__color--85">Amazing</p>
 						</a>
-						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="#">
+						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="1-3.html">
 							<p class="vollkorn choice-fontsize blue__color--85">Disruptive</p>
 						</a>
 					</div>
@@ -245,10 +257,10 @@
 					</svg>
 				<!-- RIGHT COLUMN -->
 					<div class="flex2 column">
-						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="#">
+						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="1-3.html">
 							<p class="vollkorn choice-fontsize blue__color--85">Professional</p>
 						</a>
-						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="#">
+						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="1-3.html">
 							<p class="vollkorn choice-fontsize blue__color--85">Award-Winning</p>
 						</a>
 					</div>
